osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_dynamic_fn_must_be_assigned.txt
error: `JsonData(...)` returns a dynamic result, and thus must be assigned to a variable with a type annotation
--> main.sml:1:29
     |
   1 | Foo = Entity(type='User', id=JsonData(path='$.foo'))
     |                              ^ assign it to a variable before using it:
                                    | `SomeVariable: str = JsonData(path='$.foo')`
                                    | `Foo = Entity(type='User', id=SomeVariable)`